@@ -8,6 +8,8 @@ dpkg (1.17.17) UNRELEASED; urgency=low
   * Mark for translation and improve dselect method handling error messages.
   * Defer trigger processing if the package does not fulfill dependencies.
     Closes: #671711
+  * Do not write to the database when changing selections with --dry-run.
+    Closes: #764673
 
   [ Updated programs translations ]
   * German (Sven Joachim).
